fixing the project section, where each project will be too long when in mobile. fixed only by adjusting height and margin of each image

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -23,10 +23,10 @@
   .experience-details-container {
     margin-top: 2rem;
   }
-    #profile {
-      height: 93vh;
-      margin-bottom: 0;
-    }
+  #profile {
+    height: 93vh;
+    margin-bottom: 0;
+  }
   #profile,
   .section-container {
     display: block;
@@ -34,7 +34,7 @@
 
   #profile-picture {
     width: 250px;
-      height: 250px;
+    height: 250px;
   }
   .arrow {
     display: none;
@@ -54,11 +54,36 @@
   .about-containers {
     margin-top: 0;
   }
+
+  nav {
+    justify-content: flex-end;
+    margin-right: 2rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .project-img {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    /* background-color: grey; */
+    height: 150%;
+    margin: 5rem 0;
+  }
+
+  #project-img3 {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
 }
 
 @media screen and (max-width: 600px) {
-  #contact,
-  footer {
+  #contact{
     height: 40vh;
   }
   #profile {
@@ -112,7 +137,25 @@
   .text-container {
     text-align: justify;
   }
-    .text-container {
-      text-align: center;
-    }
+  .text-container {
+    text-align: center;
+  }
+
+  .project-img {
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    object-fit: contain;
+  }
+
+  #project-img3 {
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+  }
+
 }
